fix body overflow bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,5 @@
 
 body {
   background-color: #111216;
+  overflow-y: hidden;
 }
